k8s/unicef/openremote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: openremote/proxy:${PROXY_VERSION:-latest}
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8883
            - containerPort: 8404
          volumeMounts:
            - mountPath: /deployment
              name: proxy-data
      volumes:
        - name: proxy-data
          persistentVolumeClaim:
            claimName: proxy-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: openremote/postgresql:${POSTGRESQL_VERSION:-latest}
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-data
            - mountPath: /storage
              name: manager-data
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data-pvc
        - name: manager-data
          persistentVolumeClaim:
            claimName: manager-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: openremote/keycloak:${KEYCLOAK_VERSION:-latest}
          volumeMounts:
            - mountPath: /deployment
              name: deployment-data
      volumes:
        - name: deployment-data
          hostPath:
            path: ./deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
        - name: manager
          image: openremote/manager:${MANAGER_VERSION:-latest}
          ports:
            - containerPort: 8405
          volumeMounts:
            - mountPath: /storage
              name: manager-data
      volumes:
        - name: manager-data
          persistentVolumeClaim:
            claimName: manager-data-pvc
