k8s/unicef/Nor-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
#  annotations:
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
  rules:
    - host: localhost
      http:
        paths:
#        - path: /openremote(/|$)(.*)
#          pathType: ImplementationSpecific
        - path: /
          pathType: Prefix
          backend:
            service:
              name: manager
              port:
                number: 8080
